--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                             <option value="ESTOQUE SELAVES 22">ESTOQUE SELAVES 22</option>
                             <option value="ESTOQUE SELAVES 29">ESTOQUE SELAVES 29</option>
                             <option value="ESTOQUE SELAVES 44">ESTOQUE SELAVES 44</option>
+							<option value="ESTOQUE SELAVES 47">ESTOQUE SELAVES 47</option>
                             <option value="ESTOQUE SELAVES 53">ESTOQUE SELAVES 53</option>
                             <option value="ESTOQUE SELAVES 54">ESTOQUE SELAVES 54</option>
                             <option value="ESTOQUE SP-501 48">ESTOQUE SP-501 48</option>
@@ -1992,7 +1993,7 @@
 				// Fase 5: Service Worker registration (PWA capabilities)
 				if ('serviceWorker' in navigator) {
 					window.addEventListener('load', () => {
-						navigator.serviceWorker.register('./sw.js?v=0107')
+						navigator.serviceWorker.register('./sw.js?v=0108')
 							.then(reg => {
 								console.log('Service Worker registrado com sucesso. Scope:', reg.scope);
 							})
