--- a/index.html
+++ b/index.html
@@ -1445,6 +1445,8 @@
 		function initDB() {
 			// Retorna conexão existente se disponível
 			if (dbPromise) return dbPromise;
+
+			let recoveredMissingStore = false;
 			
 			// Abre conexão com estratégia de upgrade
 			dbPromise = idb.openDB(DB_NAME, DB_VERSION, {
@@ -1507,7 +1509,21 @@
 						}
 					}
 				},
-			}).then(db => {
+			}).then(async db => {
+				// Recovery path para instalações legadas com schema inconsistente
+				if (!db.objectStoreNames.contains(STORE_NAME)) {
+					if (recoveredMissingStore) {
+						throw new Error(`Falha ao recuperar object store ausente: ${STORE_NAME}`);
+					}
+
+					recoveredMissingStore = true;
+					console.warn(`Store ${STORE_NAME} não encontrada. Recriando banco local...`);
+					db.close();
+					await idb.deleteDB(DB_NAME);
+					dbPromise = null;
+					return initDB();
+				}
+				
 				console.log('Banco de dados inicializado com sucesso');
 				return db;
 			}).catch(error => {
@@ -1993,7 +2009,7 @@
 				// Fase 5: Service Worker registration (PWA capabilities)
 				if ('serviceWorker' in navigator) {
 					window.addEventListener('load', () => {
-						navigator.serviceWorker.register('./sw.js?v=0108')
+						navigator.serviceWorker.register('./sw.js?v=0110')
 							.then(reg => {
 								console.log('Service Worker registrado com sucesso. Scope:', reg.scope);
 							})
