--- a/index.html
+++ b/index.html
@@ -1510,18 +1510,10 @@
 					}
 				},
 			}).then(async db => {
-				// Recovery path para instalações legadas com schema inconsistente
+				// Validação defensiva: força fallback centralizado no startApp
 				if (!db.objectStoreNames.contains(STORE_NAME)) {
-					if (recoveredMissingStore) {
-						throw new Error(`Falha ao recuperar object store ausente: ${STORE_NAME}`);
-					}
-
-					recoveredMissingStore = true;
-					console.warn(`Store ${STORE_NAME} não encontrada. Recriando banco local...`);
 					db.close();
-					await idb.deleteDB(DB_NAME);
-					dbPromise = null;
-					return initDB();
+					throw new Error(`Object store ausente: ${STORE_NAME}`);
 				}
 				
 				console.log('Banco de dados inicializado com sucesso');
@@ -2009,7 +2001,7 @@
 				// Fase 5: Service Worker registration (PWA capabilities)
 				if ('serviceWorker' in navigator) {
 					window.addEventListener('load', () => {
-						navigator.serviceWorker.register('./sw.js?v=0110')
+						navigator.serviceWorker.register('./sw.js?v=0111')
 							.then(reg => {
 								console.log('Service Worker registrado com sucesso. Scope:', reg.scope);
 							})
