--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<!-- Registro do Service Worker para funcionalidades offline -->
 	<script>
 	if ("serviceWorker" in navigator) {
-		navigator.serviceWorker.register("./.js");
+		navigator.serviceWorker.register("./sw.js");
 	}
 	</script>
 
